# talk-2016-generic-parallel-scan

./: .gitignore  Makefile  README.md  complexity.lhs  discarded.lhs  generic-parallel-scan.lhs  macros.tex  mine.fmt  notes.md  todo.md
Figures/circuits/: Makefile  dot-rb4-1.dot  dot-rb4.dot  evalPoly-rb4.dot  lproducts-rb4.dot  lsums-0-1-1-1-1-l-no-hash-no-opt.dot  lsums-0-1-1-1-1-l.dot  lsums-1-0-no-hash-no-opt.dot  lsums-1-0.dot  lsums-1-1-0-no-hash-no-opt.dot  lsums-1-1-0.dot  lsums-1-1-1-1-0-r-no-hash-no-opt.dot  lsums-1-1-1-1-0-r.dot  lsums-1-1-1-1-l-no-hash-no-opt.dot  lsums-1-1-1-1-r-no-hash-no-opt.dot  lsums-bush0.dot  lsums-bush1.dot  lsums-bush3.dot  lsums-bushp1.dot  lsums-bushp2.dot  lsums-i.dot  lsums-lb4.dot  lsums-lb8.dot  lsums-lpow-4-2.dot  lsums-lv11.dot  lsums-lv11xlv5.dot  lsums-lv16.dot  lsums-lv3olv4-highlight.dot  lsums-lv3olv4-unknown-no-hash.dot  lsums-lv3olv4.dot  lsums-lv4.dot  lsums-lv4olv4-unknown-no-hash.dot  lsums-lv4olv4.dot  lsums-lv5-5-6-l.dot  lsums-lv5-5-6-r.dot  lsums-lv5-lv11-unknown-no-hash-highlight.dot  lsums-lv5-lv11-unknown-no-hash.dot  lsums-lv5.dot  lsums-lv5olv7-highlight.dot  lsums-lv5olv7.dot  (+37 more)
examples/: Examples.hs  Makefile  readme.md  scan-examples.cabal  stack.yaml
